Fix overflow on maps, mobile

--- a/src/main.css
+++ b/src/main.css
@@ -880,10 +880,8 @@ section.team {
 
 .mobile-map-div {
   width: 100%;
-  /* overflow-y: scroll; */
+  overflow: hidden;
 }
 .mobile-map-div svg {
-  /* height: 100%; */
   width: 300%;
-  /* overflow-y: scroll; */
 }
